--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,237 +1,240 @@
 * {
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: rgba(0, 3, 24, 0.8);
-    color: white;
-    transition: all 150ms ease-in-out 150ms;
+  background-color: rgba(0, 3, 24, 0.8);
+  color: white;
+  transition: all 150ms ease-in-out 150ms;
 }
 
 .button-container button,
 .button-container form {
-    display: inline;
+  display: inline;
 }
 
 .button-container form {
-    float: right;
+  float: right;
 }
 
 h2 {
-    text-align: center;
+  text-align: center;
 }
 
 .container {
-    width: 1000px;
-    margin: auto;
+  width: 1000px;
+  margin-inline: auto;
+  margin-top: 2rem;
 }
 
 button:hover {
-    color: white;
+  color: white;
 }
 
 input,
 textarea,
 select,
 button {
-    display: inline-block;
-    border-radius: 10px;
-    border: 1px solid grey;
+  display: inline-block;
+  border-radius: 10px;
+  border: 1px solid grey;
 }
 
-input[name='title'],
-input[name='description'],
-input[name='deadline'],
-input[name='priority'],
+input[name="title"],
+input[name="description"],
+input[name="deadline"],
+input[name="priority"],
 select,
 button {
-    padding: 1em;
-    margin: 1em;
-    font-weight: bold;
+  padding: 1em;
+  margin: 1em;
+  font-weight: bold;
 }
 
 textarea {
-    width: 82%;
-    font-weight: bold;
-    padding: 1em;
-    margin: 1em;
+  width: 82%;
+  font-weight: bold;
+  padding: 1em;
+  margin: 1em;
 }
 
 input:focus,
 textarea:focus {
-    color: white;
-    background-color: lightblue;
-    border: 3px solid #555;
+  color: white;
+  background-color: lightblue;
+  border: 3px solid #555;
 }
 
 .form-container {
-    overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.8);
-    border-radius: 20px;
-    z-index: -1;
-    width: 50vw;
-    height: 60vh;
-    position: absolute;
-    top: calc(50% - 300px);
-    left: calc(50% - 480.5px);
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 20px;
+  z-index: -1;
+  width: 50vw;
+  height: 60vh;
+  position: absolute;
+  top: calc(50% - 300px);
+  left: calc(50% - 480.5px);
 }
 
 .form-container .is-active {
 }
 
 .form-container h3 {
-    position: relative;
-    top: 40px;
-    text-align: center;
-    color: white;
-    transition: all 500ms cubic-bezier(0, 0.6, 0.35, 1.4);
+  position: relative;
+  top: 40px;
+  text-align: center;
+  color: white;
+  transition: all 500ms cubic-bezier(0, 0.6, 0.35, 1.4);
 }
 
 .form-container,
 .form-container form {
-    overflow: hidden;
-    transform-origin: center;
-    opacity: 0;
-    transform: rotate(90deg) scale(0.5) translate(100px, -300px);
-    transition: all 500ms cubic-bezier(0, 0.6, 0.35, 1.4);
+  overflow: hidden;
+  transform-origin: center;
+  opacity: 0;
+  transform: rotate(90deg) scale(0.5) translate(100px, -300px);
+  transition: all 500ms cubic-bezier(0, 0.6, 0.35, 1.4);
 }
 
 .form-container form {
-    position: relative;
-    top: calc(50% - 240px);
-    left: calc(50% - 395px);
-    z-index: 1000;
+  position: relative;
+  top: calc(50% - 240px);
+  left: calc(50% - 395px);
+  z-index: 1000;
 }
 
 .form-container.is-active,
 form.is-active,
 form.is-active h3 {
-    z-index: 1000;
-    opacity: 1;
-    transform: rotate(0deg) scale(1);
+  z-index: 1000;
+  opacity: 1;
+  transform: rotate(0deg) scale(1);
 }
 
 input {
-    transform: rotateY(90deg);
-    transition: all 500ms ease-in-out 250ms;
-    transform-origin: left;
-    opacity: 0;
+  transform: rotateY(90deg);
+  transition: all 500ms ease-in-out 250ms;
+  transform-origin: left;
+  opacity: 0;
 }
 
 input.is-active {
-    opacity: 1;
-    transform: rotate(0deg) scale(1);
+  opacity: 1;
+  transform: rotate(0deg) scale(1);
 }
 
 .task {
-    width: 18%;
-    display: inline-block;
-    margin-left: 30px;
-    margin-right: 30px;
+  width: 18%;
+  display: inline-block;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .task-container {
-    background-color: rgba(0, 3, 24, 0.5);
-    color: lime;
-    width: 100%;
-    padding: 2em 1em 5em 1em;
+  background-color: rgba(0, 3, 24, 0.5);
+  color: lime;
+  width: 100%;
+  padding: 2em 1em 5em 1em;
 }
 
 .task-container form {
-    display: inline;
+  display: inline;
 }
 
 .task-container form input {
-    margin-left: 0;
+  margin-left: 0;
 }
 
-.task-container form input[type='checkbox'] {
-    opacity: 1;
-    transform: rotateY(0deg);
+.task-container form input[type="checkbox"] {
+  opacity: 1;
+  transform: rotateY(0deg);
 }
 tbody,
 thead,
 tr,
 th,
 td {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: baseline;
 }
 
 table {
-    border-spacing: 0;
-    border-collapse: collapse;
-    padding: 2em;
-    width: 90%;
-    text-align: center;
-    margin: auto;
+  border-spacing: 0;
+  border-collapse: collapse;
+  padding: 2em;
+  width: 90%;
+  text-align: center;
+  margin: auto;
 }
 
 tbody:before {
-    content: '-';
-    display: block;
-    line-height: 2em;
-    color: transparent;
+  content: "-";
+  display: block;
+  line-height: 2em;
+  color: transparent;
 }
 
 th {
-    padding: 0.5em;
-    color: white;
-    font-size: 1.5em;
+  padding: 0.5em;
+  color: white;
+  font-size: 1.5em;
 }
 
 td {
-    padding: 1em;
-    margin: 0;
+  padding: 1em;
+  margin: 0;
 }
 
 tr:nth-child(even) td {
-    background-color: #1e275c;
-    transform: skew(10deg);
+  background-color: #1e275c;
+  transform: skew(10deg);
 }
 
 tr:nth-child(even) td p {
-    background-color: #1e275c;
+  background-color: #1e275c;
 }
 
 tr:nth-child(even) td button,
 tr:nth-child(even) td p {
-    transform: skew(-10deg);
+  transform: skew(-10deg);
 }
 
 tr:nth-child(odd) td {
-    background-color: #15112f;
-    transform: skew(-10deg);
+  background-color: #15112f;
+  transform: skew(-10deg);
 }
 
 tr:nth-child(odd) td p {
-    transform: skew(10deg);
+  transform: skew(10deg);
 }
 
 tr:nth-child(odd) td button,
 tr:nth-child(odd) td p {
-    transform: skew(10deg);
+  transform: skew(10deg);
 }
 
 td button {
-    border: none;
-    cursor: pointer;
-    background: transparent;
+  border: none;
+  cursor: pointer;
+  background: transparent;
 }
 
 td button:hover {
-    background: white;
+  background: white;
 }
 
 .deadline-passed span {
-    display: block;
-    font-size: 12px;
-    color: red;
+  display: block;
+  font-size: 12px;
+  color: red;
 }
 
 .task-done {
-    text-decoration: line-through red;
-    color: grey;
+  text-decoration: line-through red;
+  color: grey;
 }
