--- a/src/views/partials/header.phtml
+++ b/src/views/partials/header.phtml
@@ -10,7 +10,7 @@
         <h2>Task Manager</h2>
         <div class="button-container">
             <button>Ajouter une tache</button>
-            <form action="src/tasks/delete.php" method="POST">
+            <form action="src/tasks/deleteAll.php" method="POST">
                 <button>Effacer toutes les taches</button>
             </form>
         </div>
