--- a/src/views/index.phtml
+++ b/src/views/index.phtml
@@ -59,7 +59,7 @@
                         </button>
                     </td>
                     <td>
-                        <form action="./src/tasks/deleteOneTask.php" method="POST">
+                        <form action="./src/tasks/deleteOne.php" method="POST">
                             <input type="hidden" name="taskId" value="<?= $index ?>"/>
                             <button type="submit">
                                 <svg width="16px" height="16px" viewBox="0 0 16 16" class="bi bi-dash-circle-fill" fill="red" xmlns="http://www.w3.org/2000/svg">
